--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,56 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: Fetch Weather Data
+
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: '0 * * * *'  # Runs hourly
+  workflow_dispatch:     # Allows manual triggering
+
 jobs:
-  Explore-GitHub-Actions:
+  fetch-weather:
     runs-on: ubuntu-latest
+
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+    - name: Checkout repo
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
+    - name: Install dependencies
+      run: pip install requests
+
+    - name: Fetch weather data
+      env:
+        API_KEY: ${{ secrets.WEATHER_API_KEY }}
+      run: |
+        echo "Running weather fetcher..."
+        python3 -c "
+import requests, json
+from datetime import datetime
+
+API_KEY = '${{ secrets.WEATHER_API_KEY }}'
+CITY = 'New York'
+URL = f'https://api.openweathermap.org/data/2.5/weather?q={CITY}&appid={API_KEY}&units=metric'
+r = requests.get(URL)
+if r.status_code == 200:
+    d = r.json()
+    output = {
+        'timestamp': datetime.utcnow().isoformat(),
+        'city': CITY,
+        'temperature': d['main']['temp'],
+        'weather': d['weather'][0]['description']
+    }
+    with open('weather_data.json', 'w') as f: json.dump(output, f, indent=4)
+else:
+    raise Exception(f'Failed to fetch weather data: {r.status_code}')
+        "
+
+    - name: Commit and push data
+      run: |
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git add weather_data.json
+        git commit -m "Update weather data" || echo "No changes to commit"
+        git push
